layout of index

--- a/index.html
+++ b/index.html
@@ -1,3 +1,20 @@
-<html>
-    
+<!DOCTYPE html>
+<html lang="en">
+   <head>
+      <meta charset="UTF-8">
+      <title>Assignment 1 Group 70</title>
+   </head>
+   <body>
+    <h1>Assignment 1 Group 70</h1>
+    <h2>Photo Album</h2>
+    <nav>
+
+    </nav>
+      <p>This is a section</p>
+      <section>
+        <table>
+
+        </table>
+      </section>
+   </body>
 </html>
