--- a/index.html
+++ b/index.html
@@ -13,7 +13,13 @@
       <p>This is a section</p>
       <section>
         <table>
-
+         <tr>
+            <th><strong>image</strong></th>
+            <th><strong>author</strong></th>
+            <th><strong>alt</strong></th>
+            <th><strong>tags</strong></th>
+            <th><strong>description</strong></th>
+         </tr>
         </table>
       </section>
    </body>
