--- a/index.html
+++ b/index.html
@@ -13,13 +13,23 @@
       <p>This is a section</p>
       <section>
         <table>
-         <tr>
-            <th><strong>image</strong></th>
-            <th><strong>author</strong></th>
-            <th><strong>alt</strong></th>
-            <th><strong>tags</strong></th>
-            <th><strong>description</strong></th>
-         </tr>
+            <tr>
+                <th><strong>image</strong></th>
+                <th><strong>author</strong></th>
+                <th><strong>alt</strong></th>
+                <th><strong>tags</strong></th>
+                <th><strong>description</strong></th>
+            </tr>
+
+            <tr>
+                <td><img src="https://en.wikipedia.org/wiki/Richard_Feynman#/media/File:Richard_Feynman_Nobel.jpg"></td>
+                <td>Richard Feynman</td>
+                <td>Image of Nobel laureate Richard Feynman</td>
+                <td>physics, nobel_prize, man</td>
+                <td>Nobel laureate Richard Feynman is the author of the famous The Feynman Lectures on Physics, 
+                    perhaps his most accessible work for anyone with an interest in physics, 
+                    compiled from lectures to Caltech undergraduates in 1961–64.</td>
+            </tr>
         </table>
       </section>
    </body>
