--- a/index.html
+++ b/index.html
@@ -12,25 +12,33 @@
     </nav>
       <p>This is a section</p>
       <section>
-        <table>
-            <tr>
-                <th><strong>image</strong></th>
-                <th><strong>author</strong></th>
-                <th><strong>alt</strong></th>
-                <th><strong>tags</strong></th>
-                <th><strong>description</strong></th>
-            </tr>
+            <table>
+               <tr>
+                  <th><strong>image</strong></th>
+                  <th><strong>author</strong></th>
+                  <th><strong>alt</strong></th>
+                  <th><strong>tags</strong></th>
+                  <th><strong>description</strong></th>
+               </tr>
 
-            <tr>
-                <td><img src="https://en.wikipedia.org/wiki/Richard_Feynman#/media/File:Richard_Feynman_Nobel.jpg"></td>
-                <td>Richard Feynman</td>
-                <td>Image of Nobel laureate Richard Feynman</td>
-                <td>physics, nobel_prize, man</td>
-                <td>Nobel laureate Richard Feynman is the author of the famous The Feynman Lectures on Physics, 
+               <tr>
+                  <td><img src="https://upload.wikimedia.org/wikipedia/en/4/42/Richard_Feynman_Nobel.jpg"></td>
+                  <td>Richard Feynman</td>
+                  <td>Image of Nobel laureate Richard Feynman</td>
+                  <td>physics, nobel_prize, man</td>
+                  <td>Nobel laureate Richard Feynman is the author of the famous The Feynman Lectures on Physics, 
                     perhaps his most accessible work for anyone with an interest in physics, 
                     compiled from lectures to Caltech undergraduates in 1961–64.</td>
-            </tr>
-        </table>
+               </tr>
+               <tr>
+                  <td><img src="https://d2eehagpk5cl65.cloudfront.net/img/q60/uploads/2023/01/jordanpeterson_1161x653.jpg"</td>
+                  <td>Jordan Peterson</td>
+                  <td>Image of Jordan peterson</td>
+                  <td>psychologist, author, teacher</td>
+                  <td>The Canadian man Jordan Peterson was born at the 12th of June in 1962. 
+                  He is a media personality, a retired clincal psychologist and author.</td>
+               </tr>
+            </table>
       </section>
    </body>
 </html>
