--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
     </nav>
       <p>This is a section</p>
       <section>
-<<<<<<< HEAD
             <table>
                <tr>
                   <th><strong>image</strong></th>
@@ -23,34 +22,75 @@
                </tr>
 
                <tr>
-                  <td><img src="https://upload.wikimedia.org/wikipedia/en/4/42/Richard_Feynman_Nobel.jpg"></td>
+                  <td><img src="https://upload.wikimedia.org/wikipedia/en/4/42/Richard_Feynman_Nobel.jpg" style='width:20%;height: 20%;'></td>
                   <td>Richard Feynman</td>
                   <td>Image of Nobel laureate Richard Feynman</td>
-                  <td>physics, nobel_prize, man</td>
+                  <td>
+                     <ul>
+                        <li>physics</li>
+                        <li>nobel prize</li>
+                        <li>man</li>
+                     </ul>              
+                  </td>
                   <td>Nobel laureate Richard Feynman is the author of the famous The Feynman Lectures on Physics, 
                     perhaps his most accessible work for anyone with an interest in physics, 
                     compiled from lectures to Caltech undergraduates in 1961–64.</td>
                </tr>
 
                <tr>
-                  <td><img src="https://d2eehagpk5cl65.cloudfront.net/img/q60/uploads/2023/01/jordanpeterson_1161x653.jpg"</td>
+                  <td><img src="https://d2eehagpk5cl65.cloudfront.net/img/q60/uploads/2023/01/jordanpeterson_1161x653.jpg" style='width:20%;height: 20%;' alt = "Writer Jordan Person"</td>
                   <td>Jordan Peterson</td>
                   <td>Image of Jordan peterson</td>
-                  <td>psychologist, author, teacher</td>
+                  <td>
+                     <dl>
+                        <dt>phychologist</dt>
+                        <dt>author</dt>
+                        <dt>teacher</dt>
+                     </dl>
+                  </td>
                   <td>The Canadian man Jordan Peterson was born at the 12th of June in 1962. 
                   He is a media personality, a retired clincal psychologist and author.</td>
                </tr>
 
                 <tr>
-                    <td><img src="https://media.newyorker.com/photos/5909675d019dfc3494ea0dd0/master/w_2560%2Cc_limit/120409_r22060_g2048.jpg"
-                        alt="Writer Albert Camus"></td>
+                    <td><img src="https://media.newyorker.com/photos/5909675d019dfc3494ea0dd0/master/w_2560%2Cc_limit/120409_r22060_g2048.jpg" style='width:20%;height: 20%;' alt="Writer Albert Camus"></td>
                     <td>Albert Camus</td>
                     <td>Image of philosopher Albert Camus</td>
-                    <td>philosophy, french, absurdism</td>
+                    <td>
+                        <ol>
+                           <li>philosophy</li>
+                           <li>french</li>
+                           <li>absurdism</li>
+                        </ol> 
+                     </td>
                     <td>Albert Camus was a French philosopher and author, who pioneered the ideo of absurdism. 
                         He joined the French Resistance during WWII where he served as editor-in-chief at <em>Combat</em>, an outlawed newspaper. 
                         After the war, he wrote many books and gave many lectures around the world.</td>
                 </tr>
+                <form action="https://wt.ops.labs.vu.nl/api23/a860222c" method="post">
+                  <tr>
+                     <td>
+                        <label for="img">Image Url: </label>
+                        <input type="text" id="img" name="img"><br>
+                     </td>
+                     <td>
+                        <label for="author">Author name: </label>
+                        <input type="text" id="author" name="author" placeholder=" Richard Feynman"><br>
+                     </td>
+                     <td>
+                        <label for="alt">Alt: </label>
+                        <input type="text" id="alt" name="alt">
+                     </td>
+                     <td>
+                        <label for="tags">Tags: </label>
+                        <input type="text" id="tags" name="tags">
+                     </td>
+                     <td>
+                        <label for="description">Description: </label>
+                        <input type="text" id="description" name="description">
+                     </td>
+                  </tr>
+                </form>
             </table>
       </section>
    </body>
