--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     <h1>Assignment 1 Group 70</h1>
     <h2>Photo Album</h2>
     <nav>
-
+      <ul>
+         <li><a href="index.html"> Homepage </a></li>
+         <li><a href=""> Other </a></li>
+      </ul>
     </nav>
       <p>This is a section</p>
       <section>
