--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
                      <td>
                         <label for="description">Description: </label>
                         <input type="text" id="description" name="description">
+                        <input type="submit" value="Submit">
                      </td>
                   </tr>
                 </form>
