--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                             <li>man</li>
                          </ul>
                     </td>
-                    <td>Nobel laureate Richard Feynman is the author of the famous The Feynman Lectures on Physics, 
+                    <td>Nobel laureate Richard Feynman is the author of the famous <em>The Feynman Lectures</em> on Physics, 
                       perhaps his most accessible work for anyone with an interest in physics, 
                       compiled from lectures to Caltech undergraduates in 1961–64.</td>
                  </tr>
@@ -52,7 +52,8 @@
                         </ul>
                     </td>
                     <td>Judith Butler is an American philosopher and gender theorist whose work has influenced political philosophy, 
-                        ethics, and the fields of third-wave feminism, queer theory, and literary theory</td>
+                        ethics, and the fields of third-wave feminism, queer theory, and literary theory. 
+                        Her most famous work is <em>Gender Trouble: Feminism and the Subversion of Identity</em>.</td>
                 </tr>
 
                 <tr>
