--- a/index.html
+++ b/index.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-   <head>
-      <meta charset="UTF-8">
-      <link rel="stylesheet" href="style.css">
-      <title>Assignment 1 Group 70</title>
-   </head>
-   <body>
-    <nav id="nav">
-        <ul>
-           <li class="active"><a href=""> Home </a></li>
-           <li><a href="other.html"> Other </a></li>
-        </ul>
-      </nav>
-    <h1>Assignment 1: "HTML & CSS Markup"</h1>
-    <h2>Web Tech Group 70</h2>
-    <h2 style="font-size: 20px">Josh & Bodhi</h2>
+    <head>
+        <meta charset="UTF-8">
+        <link rel="stylesheet" href="style.css">
+        <title>Assignment 1 Group 70</title>
+    </head>
+    <body>
+        <nav>
+            <ul>
+            <li class="active"><a href=""> Home </a></li>
+            <li><a href="other.html"> Other </a></li>
+            </ul>
+        </nav>
+        <h1>Assignment 1: "HTML & CSS Markup"</h1>
+        <h2>Web Tech Group 70</h2>
+        <h2 style="font-size:20px">Josh & Bodhi</h2>
 
       <section>
             <table id="authors">
@@ -65,18 +65,16 @@
                     <td>
                         <ul>
                             <li>phychologist</li>
-                            <li>author</li>
+                            <li>right-wing</li>
                             <li>teacher</li>
                         </ul>
                     </td>
-                    <td>The Canadian man Jordan Peterson was born at the 12th of June in 1962. 
-                    He is a media personality, a retired clincal psychologist and author.</td>
+                    <td>The Canadian Jordan Peterson was born at the 12th of June in 1962. 
+                    He is a polarizing media personality, a retired clincal psychologist, and an author.</td>
                 </tr>
 
                 <tr>
-                    <td><img src="https://media.newyorker.com/photos/5909675d019dfc3494ea0dd0/master/w_2560%2Cc_limit/120409_r22060_g2048.jpg"
-                        alt="Writer Albert Camus"
-                        class="icon"></td>
+                    <td><img class="icon" src="https://media.newyorker.com/photos/5909675d019dfc3494ea0dd0/master/w_2560%2Cc_limit/120409_r22060_g2048.jpg"></td>
                     <td>Albert Camus</td>
                     <td>Image of philosopher Albert Camus</td>
                     <td>
@@ -94,19 +92,19 @@
                 <form action="https://wt.ops.labs.vu.nl/api23/a860222c" method="post">
                   <tr>
                      <td>
-                        <label for="img">Image Url: </label>
+                        <label for="img">Image URL: </label>
                         <input type="text" id="img" name="img"><br>
                      </td>
                      <td>
-                        <label for="author">Author name: </label>
-                        <input type="text" id="author" name="author" placeholder=" Richard Feynman"><br>
+                        <label for="author">Author: </label>
+                        <input type="text" id="author" name="author" placeholder="Richard Feynman"><br>
                      </td>
                      <td>
-                        <label for="alt">Alt: </label>
+                        <label for="alt">Alt Text: </label>
                         <input type="text" id="alt" name="alt">
                      </td>
                      <td>
-                        <label for="tags">Tags: </label>
+                        <label for="tags">Tags: </label> <!-- response must be formatted as list -->
                         <input type="text" id="tags" name="tags">
                      </td>
                      <td>
