--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <nav id="nav">
         <ul>
            <li class="active"><a href=""> Home </a></li>
-           <li><a href="other.html"> Other </a></li>
+           <li><a href=#bestSellingAuthors> Other </a></li>
         </ul>
       </nav>
     <h1>Assignment 1: "HTML & CSS Markup"</h1>
@@ -99,19 +99,19 @@
                   <tr>
                      <td>
                         <label for="img">Image Url: </label>
-                        <input type="text" id="img" name="img"><br>
+                        <input type="text" id="img" name="img" required><br>
                      </td>
                      <td>
                         <label for="author">Author name: </label>
-                        <input type="text" id="author" name="author" placeholder=" Richard Feynman"><br>
+                        <input type="text" id="author" name="author" required><br>
                      </td>
                      <td>
                         <label for="alt">Alt: </label>
-                        <input type="text" id="alt" name="alt">
+                        <input type="text" id="alt" name="alt" required>
                      </td>
                      <td>
                         <label for="tags">Tags: </label>
-                        <input type="text" id="tags" name="tags">
+                        <input type="text" id="tags" name="tags" required>
                      </td>
                      <td>
                         <label for="description">Description: </label><br>
