--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
     <h2>Web Tech Group 70</h2>
     <h2 style="font-size: 20px">Josh & Bodhi</h2>
 
+    <p>
+        This webpage contains a photo album of famous authors, and displays functional use of various fundamentals of HTML and CSS.
+        It also contains a form which, once fully implemented, will allow users to add their own entries to the table of authors.
+        The website is optimised to display on both PC displays and mobile devices.
+    </p>
+
       <section>
             <table id="authors">
                <caption><strong><pre>Photo album of famous authors</pre></strong></caption>
