--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
    <head>
       <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1">
       <link rel="stylesheet" href="style.css">
       <title>Assignment 1 Group 70</title>
    </head>
