--- a/index.html
+++ b/index.html
@@ -144,5 +144,19 @@
             <dd>Playwright, Poet, Actor</dd>
          </dl>
       </section>
+      <section id="compatibility">
+         <h3>Compatibility report</h3>
+         <p>
+            To test and see if this webpage looks different in other browsers, we ran our webpage on three different
+            browsers: Google Chrome, Microsoft Edge and Firefox. The differences between Google Chrome and Microsoft 
+            Edge are barely visible. Although in Firefox there was one noticeable difference. The message that appears 
+            when you forget to fill in the form completely has a whole different style compared to the other browsers.
+            Each browser has it's own default values for these kind of things. 
+            <br><br>
+            Furthermore the size of your screen will determine the way this webpage presents itself. If the screen has a
+            width below 600px the table will collapse and appear differently in order to make it more readable on small 
+            screens. 
+         </p>
+      </section>
    </body>
 </html>
