--- a/trial.html
+++ b/trial.html
@@ -5,14 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
     <title>Assignment 1 Group 70</title>
 </head>
 
 <body>
     <h1>Test</h1>
-    <table id="authors"></table>
+    <table id="authors">
+    </table>
     <div>
-        <button id="search" onclick="getForm()">search</button>
+        <button id="search">search</button>
+        <button id="add">add</button>
     </div>
+    <script src="script.js"></script>
 </body>
