--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
             more readable on small screens.
         </p>
     </section>
-    <script src="script.js"></script>
+    <script async src="script.js"></script>
 </body>
 
 </html>
