working form submit and reset

--- a/index.html
+++ b/index.html
@@ -132,15 +132,15 @@
                     </td>
                     <td>
                         <label for="author">Author Name: </label><br>
-                        <input type="text" id="author" name="author" required value="Image">
+                        <input type="text" id="author" name="author" required value="Name">
                     </td>
                     <td>
                         <label for="alt">Alt Text: </label><br>
-                        <input type="text" id="alt" name="alt" value="Play">
+                        <input type="text" id="alt" name="alt" value="Alt Text">
                     </td>
                     <td>
                         <label for="tags">Tags (Comma Separated): </label><br>
-                        <input type="text" id="tags" name="tags" value="tags">
+                        <input type="text" id="tags" name="tags" value="Tags, Tags, Tags">
                     </td>
                     <td>
                         <label for="description">Description: </label><br>
@@ -150,7 +150,7 @@
 
             </table>
         </form>
-        <button form="form">Submit</button><br>
+        <button form="form" type="submit">Submit</button><br>
         <button id="reset" onclick="resetDefault()">Reset</button>
         <button id="clear" onclick="clearTable()">Clear</button>
     </div><br>
@@ -173,7 +173,7 @@
         </figure>
         <dl>
             <dt><strong>Tags</strong></dt>
-            <dd>Playwright, Poet, Actor</dd>
+            <dd style="text-align: center;">Playwright, Poet, Actor</dd>
         </dl>
     </div>
 
