--- a/index.html
+++ b/index.html
@@ -155,6 +155,12 @@
         <button id="clear" onclick="clearTable()">Clear</button>
     </div><br>
 
+    <div>
+        <select id="selectAuthor">
+            <option>Select author</option>
+        </select>
+    </div>
+
     <section id="bestSellingAuthors">
         <h3>Top 5 Best selling authors of all time</h3>
         <ol>
