--- a/trial.html
+++ b/trial.html
@@ -13,6 +13,11 @@
     <table id="authors">
     </table>
     <div>
+        <select id="selectAuthor">
+            <option>Select author</option>
+        </select>
+    </div>
+    <div>
         <button id="search">search</button>
         <button id="add">add</button>
         <button id="modalButton">Acces modal</button>
