--- a/a3/documentation.html
+++ b/a3/documentation.html
@@ -1,15 +1,15 @@
 <!--
 DOCUMENTION FOR FRONT-END USERS OF this RESTFULL HTTP API
 
-When using a server and a database there are a few thing that are important to know. First of all it is 
+When using a server and a database there are a few things that are important to know. First of all it is 
 important to know what is meant by CRUD. CRUD stands for Create, Read, Update and Delete. CRUD helps the user to 
 get, post, update or delete information from the database. Down below you will find a list with an explaination
-of each operator, combined with the key REST (Representational State Transfer):
+of each operator, combined with the key REST (Representational State Transfer) concepts:
 
 1. CREATE (POST) - The create function allows the user to add new records/information to the database. In this server
-if a new record is being posted, the endpoint that is being used is 'http://localhost/..../api/'. This is the location
+if a new record is being posted, the endpoint that is being used is 'http://localhost/..../api'. This is the location
 where the new record can be found. Posting requires the user to send along a body with a new author as paramater. 
-This body would look this for example:
+This body would look like this for example:
 {
     "author":  "Jason",
 	"alt": "picture of jason",
@@ -17,22 +17,38 @@ This body would look this for example:
 	"image": "example.jpg",
 	"description": "Jason is an author"
 }
+The content type is application/json.
 
-2. READ (GET) - The read function allows the user to get records/information from the database. To get information
-of an existing record in the database a GET request will be usefull. The endpoint that is being used to receive 
-information about al the authors in the database is 'http://localhost/..../api'. This will give the user a list of 
-al the authors that exist in the data base and it requires no further parameters. 
+2. READ (GET) - The read function allows the user to get records/information from the database. This method is 
+considered safe, since it doesn't change anything in the server. it is also idempotent, because identical request will
+always have the same results. To get information of an existing record in the database a GET request will be 
+usefull. The endpoint that is being used to receive information about al the authors in the database is 
+'http://localhost/..../api'. This will give the user a list of al the authors that exist in the data base and it 
+doesn't require any parameters. 
 
 If the user wants to acces information of only one author the user should use the following endpoint:
-'http://localhost/..../api/?id'. The id of the specific author should be given as a paramter.  
+'http://localhost/..../api/:id'. The id of the specific author should be given at the end of the url.
+For example, to get the information of author with id 1 the following request needs to be made: GET http://localhost/..../api/1
+The respons will be a json body with the authors information in it, for example: [{"id":1,"author":"Tim Berners-Lee",
+"alt":"Image of Berners-Lee","tags":"html,http,url,cern,mit","image":"https://upload.wikimedia.org/wikipedia/commons/9/9d/Sir_Tim_Berners-Lee.jpg",
+"description":"The internet and the Web aren't the same thing."}] 
 
 3. UPDATE (PUT) - The update function allows the user to make changes to current records/information of the database. 
+To do this the put method is used and this one has the same endpoint as the post method: 'http://localhost/..../api/:id'.
+Again the id depends on which record needs to be updated. A body is sent as paramater to this function and this looks 
+similair to the body of the post method. Furthermore the content type is application/json and the method is idempotent
+identical request will always get the same results. 
 
+4. DELETE (DELETE) - The delete function allows the user to delete current records/information completely from the database.
+The delete method is also considered impotent and therefore will always have the same results with identical request. 
+Furthermore this method also has a url endpoint of 'http://localhost/..../api/:id' and gives the id of one record as paramater.
+The record with the given id will be removed permanently from the database. As an example, to remove the author with id 1 
+the following method can be used: 'DELETE http://localhost/..../api/1'.
 
-4. DELETE (DELETE)- The delete function allows the user to delete current records/information completely form the database.
+For all the methods different kinds of response messages are set up. They all start by looking for an error. If an 
+error is found the appropriate response with code 400 will be given to indicate that there is something wrong with the 
+request. If there is no error the method works and sends the requested data in JSON and/or lets the user know the 
+request was handled correctly. For example, the post and put methods send the status code 201, which indicates that
+something new is succesfully created. 
 
-To acces 
-
-
- 
 -->
